kuberntes-storage/ebs-sc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ebs-store-pod
  labels:
    app: ebs-store-pod
spec:
  volumes:
  - name: ebs-store-pod
    persistentVolumeClaim: 
      claimName: ebs-store-pod
  containers:
  - name: ebs-store-pod
    image: ubuntu:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    command:
      - sleep
      - "3600"    
    volumeMounts:
    - name: ebs-store-pod
      mountPath: /opt
