kuberntes-storage/hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  labels:
    app: app-pod
spec:
  containers:
  - name: app-pod
    image: ubuntu:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    command:
      - sleep
      - "3600"
    volumeMounts:
    - name: hostpath-volume
      mountPath: /opt  
  volumes:
  - name: hostpath-volume
    hostPath: /mnt/data-app-pod
    type: DirectoryOrCreate
