kuberntes-storage/mount-nfs-share.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-store
  labels: 
    app: nfs-store

---
apiVersion: v1
kind: Pod
metadata:
  name: nfs-store-pod
  namespace: nfs-store
  labels:
    app: nfs-store-pod
spec:
  volumes:
  - name: data-path
    persistentVolumeClaim: 
      claimName: nfs-store-data-vol1
  containers:
  - name: nfs-store-pod
    image: ubuntu:latest
    command:
      - sleep
      - "3600"
    volumeMounts:
    - name: data-path
      mountPath: /opt
