kuberntes-storage/sc-pod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: autotest

---
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  containers:
  - name: myapp
    image: ubuntu:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    volumeMounts:
    - name: data-mount
      mountPath: /opt
  volumes:
  - name: data-mount
    persistentVolumeClaim:
      claimName: mypvc
